--- a/Cv.css
+++ b/Cv.css
@@ -489,9 +489,9 @@
             }
             a.button-thanks-contact button {
                 font-size: 30px;
+                margin-top: 30px;
             }
             .screen6 {
-                min-height: 70vh;
                 padding-bottom: 30px;
             }
             .circle-radius {
